Issue #11969 - Fix - Site breaks when custom theme added and cache cleared outside vsite (#12607)
* Issue #11969 - Drupal 8.7 config changes

These configs got missed during Drupal 8.7 upgrade.

* Issue #11969 - Make sure custom theme data is stored in cache

* Issue #11969 - Make sure required all cache data is present for custom theme

* Issue #11969 - Try initiating the custom theme via hook_init

* Issue #11969 - It is working!!

* Issue #11969 - Mention reason for the approach

* Issue #11969 - activate a custom theme only when necessary

* Issue #11969 - Put dev placeholder for test and handling special cases

* Issue #11969 - Fix - custom theme is set as default for admin pages

* Issue #11969 - Remove TODO placeholder

--- a/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
+++ b/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
@@ -7,3 +7,8 @@ services:
     arguments: ['@theme_handler']
   cp_appearance.custom_theme_installer:
     class: \Drupal\cp_appearance\CustomThemeInstaller
+  cp_appearance.init_custom_theme_subscriber:
+    class: \Drupal\cp_appearance\EventSubscriber\InitCustomThemeSubscriber
+    arguments: ['@config.factory', '@theme.manager', '@theme.initialization']
+    tags:
+      - {name: event_subscriber}
