--- a/.travis.yml
+++ b/.travis.yml
@@ -27,16 +27,10 @@ env:
   matrix:
     - JOB=job:check-coding-standards
     - JOB=job:run-unit-tests
-    - JOB="job:run-kernel-tests widgets-1"
-    - JOB="job:run-kernel-tests widgets-2"
-    - JOB="job:run-kernel-tests widgets-3"
-    - JOB="job:run-kernel-tests widgets-4"
-    - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
-    - JOB="job:run-kernel-tests publications-1,redirect,vsite"
-    - JOB="job:run-kernel-tests publications-2,wysiwyg"
-    - JOB="job:run-kernel-tests os"
-    - JOB="job:run-kernel-tests cp"
-    - JOB="job:run-kernel-tests other,cp-menu"
+    - JOB="job:run-kernel-tests widgets-1,widgets-2,widgets-3"
+    - JOB="job:run-kernel-tests publications-1,wysiwyg,vsite,os,os-theme-preview"
+    - JOB="job:run-kernel-tests cp,other,cp-menu,profiles,redirect,cp-appearance"
+    - JOB="job:run-kernel-tests widgets-4,publications-2"
     - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
     - JOB="job:run-functional-tests analytics,publications,cp-appearance,redirect,twitter,os,vsite"
     - JOB="job:run-functional-javascript-tests classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
@@ -57,6 +51,3 @@ script:
 
 after_failure:
   - artifacts upload
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
