12335 lof bug fix (#12708)
* Issue #12335 - LOF full mode fix and LOP form fix.

* Issue #12335 - Os theme preview test fix trial.

* Issue #12335 - Os theme preview test fix trial.

* Issue #12335 - Travis build memory outage fix.

* Issue #12335 - LOF form and html media fix

* Issue #12335 - LOF helper method and test.

* Issue #12335 - Library correction.

* Issue #12335 - handle node autocomplete entities too.

--- a/config/sync/core.entity_view_display.media.html.full.yml
+++ b/config/sync/core.entity_view_display.media.html.full.yml
@@ -24,8 +24,8 @@ content:
     weight: 1
     label: visually_hidden
     settings:
-      max_width: 100%
-      max_height: '701'
+      max_width: '560'
+      max_height: '315'
     third_party_settings: {  }
     type: 'media:embed'
     region: content
