Issue #12694 - Fix - robo fails to start tests (#12711)
* Issue #12694 - Issue #12694 - Try travis job exclude

* Issue #12694 - Issue #12694 - Try travis job exclude (2)

* Issue #12694 - Issue #12694 - Try travis job exclude (3)

* Issue #12694 - Revert "Issue #12694 - Issue #12694 - Try travis job exclude (3)"

This reverts commit c3a33244c0dae1205f5eb5f61560d782c9b95d94.

* Issue #12694 - Issue #12694 - Try travis job exclude (4) without global

* Issue #12694 - Revert "Issue #12694 - Issue #12694 - Try travis job exclude (4) without global"

This reverts commit ff1125abd67e6009d8d260346dedd23a01e4d883.

* Issue #12694 - Issue #12694 - Try travis job exclude (5) fix naming matrix

* Issue #12694 - trial and error - run only desired jobs

* Issue #12694 - trial and error - explicitly exclude codecov jobs

* Issue #12694 - trial and error - try with keyword `jobs`

* Revert "Issue #12694 - trial and error - try with keyword `jobs`"

This reverts commit ab94ce645eb4d7dede7de8b85e330472079068f3.

* Issue #12694 - trial and error - differentiate codecov jobs

* Issue #12694 - trial and error - only mention excluded jobs

* Revert "Issue #12694 - trial and error - only mention excluded jobs"

This reverts commit bd125eb48251236796dfec4440d9a51089958822.

* Revert "Issue #12694 - trial and error - differentiate codecov jobs"

This reverts commit cab1d0afa05ebdac5048f0e2d9d699169eaa7a63.

* Issue #12694 - Trial and error - try doing the segregation using stages

* Issue #12694 - trial and error - fix initiating of incorrect stage

* Issue #12694 - trial and error - try commit_message condition

* Issue #12694 - trial and error - try doing codecov inside deploy stage

* Issue #12694 - trial and error - run jobs as scripts

* Issue #12694 - trial and run - try running tests parallely

* Issue #12694 - trial and error - generate codecov report parallely

* Issue #12694 - trial and error - correct condition for codecov r

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,47 +33,36 @@ jobs:
   include:
     - script: robo job:check-coding-standards
     - script: robo job:run-unit-tests
-    - script: robo "job:run-kernel-tests widgets-1,widgets-2,widgets-3"
-    - script: robo "job:run-kernel-tests publications-1,wysiwyg,vsite,os,os-theme-preview"
-    - script: robo "job:run-kernel-tests cp,other,cp-menu,profiles,redirect,cp-appearance"
-    - script: robo "job:run-kernel-tests widgets-4,publications-2"
-    - script: robo "job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
-    - script: robo "job:run-functional-tests analytics,publications,cp-appearance,redirect,twitter,os,vsite"
-    - script: robo "job:run-functional-javascript-tests classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
-    - script: robo "job:run-functional-javascript-tests events,os,vsite,os-theme-preview,widgets,blog,faq,news,presentations"
+    - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3"
+    - script: robo job:run-kernel-tests "publications-1,wysiwyg,vsite,os,os-theme-preview"
+    - script: robo job:run-kernel-tests "cp,other,cp-menu,profiles,redirect,cp-appearance"
+    - script: robo job:run-kernel-tests "widgets-4,publications-2"
+    - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
+    - script: robo job:run-functional-tests "analytics,publications,cp-appearance,redirect,twitter,os,vsite"
+    - script: robo job:run-functional-javascript-tests "classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
+    - script: robo job:run-functional-javascript-tests "events,os,vsite,os-theme-preview,widgets,blog,faq,news,presentations"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo job:run-unit-tests
+      script: robo job:run-unit-tests-code-coverage
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests widgets-1"
+      script: robo job:run-kernel-tests-code-coverage "widgets-1"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests widgets-2"
+      script: robo job:run-kernel-tests-code-coverage "widgets-2"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests widgets-3"
+      script: robo job:run-kernel-tests-code-coverage "widgets-3"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests widgets-4"
+      script: robo job:run-kernel-tests-code-coverage "widgets-4"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
+      script: robo job:run-kernel-tests-code-coverage "os-theme-preview,cp-appearance,profiles"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests publications-1,redirect,vsite"
+      script: robo job:run-kernel-tests-code-coverage "publications-1,redirect,vsite"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests publications-2,wysiwyg"
+      script: robo job:run-kernel-tests-code-coverage "publications-2,wysiwyg"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests os"
+      script: robo job:run-kernel-tests-code-coverage "os"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests cp"
+      script: robo job:run-kernel-tests-code-coverage "cp"
     - stage: deploy
-      env: PHP_XDEBUG_ENABLED=1
-      script: robo "job:run-kernel-tests other,cp-menu"
+      script: robo job:run-kernel-tests-code-coverage "other,cp-menu"
 
 before_install:
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
