--- a/.travis.yml
+++ b/.travis.yml
@@ -43,26 +43,37 @@ jobs:
     - script: robo job:run-functional-javascript-tests "events,os,vsite,os-theme-preview,widgets,blog,faq,news,presentations"
     - stage: deploy
       script: robo job:run-unit-tests-code-coverage
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "widgets-1"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "widgets-2"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "widgets-3"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "widgets-4"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "os-theme-preview,cp-appearance,profiles"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "publications-1,redirect,vsite"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "publications-2,wysiwyg"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "os"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "cp"
+      after_success: bash <(curl -s https://codecov.io/bash)
     - stage: deploy
       script: robo job:run-kernel-tests-code-coverage "other,cp-menu"
+      after_success: bash <(curl -s https://codecov.io/bash)
 
 before_install:
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
