--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
 
 stages:
   - test
-  - name: deploy
+  - name: codecov
     if: branch = 8.x-1.x-dev
 
 jobs:
@@ -41,37 +41,37 @@ jobs:
     - script: robo job:run-functional-tests "analytics,publications,cp-appearance,redirect,twitter,os,vsite"
     - script: robo job:run-functional-javascript-tests "classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
     - script: robo job:run-functional-javascript-tests "events,os,vsite,os-theme-preview,widgets,blog,faq,news,presentations"
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-unit-tests-code-coverage
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "widgets-1"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "widgets-2"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "widgets-3"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "widgets-4"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "os-theme-preview,cp-appearance,profiles"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "publications-1,redirect,vsite"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "publications-2,wysiwyg"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "os"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "cp"
       after_success: bash <(curl -s https://codecov.io/bash)
-    - stage: deploy
+    - stage: codecov
       script: robo job:run-kernel-tests-code-coverage "other,cp-menu"
       after_success: bash <(curl -s https://codecov.io/bash)
 
