--- a/config/sync/search_api.index.os_search_index.yml
+++ b/config/sync/search_api.index.os_search_index.yml
@@ -2,14 +2,15 @@ uuid: 9e028085-ebb5-4e0d-82e5-4f4b545418ce
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.storage.node.body
-    - search_api.server.os_search
   module:
     - node
     - search_api
     - os_search
     - bibcite_entity
+  config:
+    - field.storage.node.body
+    - field.storage.node.field_year_offered
+    - search_api.server.os_search
 id: os_search_index
 name: 'OS Search Index'
 description: 'Main OS Search Index'
@@ -23,10 +24,34 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.body
+  created:
+    label: 'Authored on'
+    datasource_id: 'entity:node'
+    property_path: created
+    type: date
+    dependencies:
+      module:
+        - node
   custom_search_group:
     label: 'Group (text)'
     property_path: custom_search_group
     type: integer
+  field_year_offered:
+    label: 'Year offered'
+    datasource_id: 'entity:node'
+    property_path: field_year_offered
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_year_offered
+  title:
+    label: Title
+    datasource_id: 'entity:node'
+    property_path: title
+    type: string
+    dependencies:
+      module:
+        - node
   type:
     label: 'Content type'
     datasource_id: 'entity:node'
@@ -66,6 +91,8 @@ processor_settings:
     all_fields: true
     fields:
       - body
+      - field_year_offered
+      - title
       - type
     title: true
     alt: true
@@ -82,6 +109,8 @@ processor_settings:
     all_fields: true
     fields:
       - body
+      - field_year_offered
+      - title
       - type
     weights:
       preprocess_index: -20
