--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -154,6 +154,8 @@ module:
   robotstxt: 0
   search_api: 0
   search_api_page: 0
+  search_api_solr: 0
+  search_api_spellcheck: 0
   serialization: 0
   shorten: 0
   slick: 0
