Issue #12630 - Search Permission

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -132,3 +132,4 @@ permissions:
   - 'view bibcite_reference website revisions'
   - 'view control_panel in toolbar'
   - 'view media'
+  - 'view search api pages'
