--- a/config/sync/views.view.past_events_calendar.yml
+++ b/config/sync/views.view.past_events_calendar.yml
@@ -705,6 +705,7 @@ display:
         filter_groups: false
         title: false
         pager: false
+        use_ajax: false
       row:
         type: 'entity:node'
         options:
@@ -831,7 +832,7 @@ display:
       pager:
         type: vsite_infinite_scroll
         options:
-          items_per_page: 0
+          items_per_page: 10
           offset: 0
           id: '0'
           total_pages: ''
@@ -848,7 +849,8 @@ display:
             offset_label: Offset
           views_infinite_scroll:
             button_text: 'Load More'
-            automatically_load_content: 0
+            automatically_load_content: 1
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
