--- a/config/sync/search_api.index.os_search_index.yml
+++ b/config/sync/search_api.index.os_search_index.yml
@@ -2,55 +2,16 @@ uuid: 9e028085-ebb5-4e0d-82e5-4f4b545418ce
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.body
+    - field.storage.node.field_year_offered
+    - search_api.server.os_search
   module:
-    - search_api_solr
     - node
     - os_publications
     - bibcite_entity
     - search_api
     - os_search
-  config:
-    - field.storage.node.body
-    - field.storage.node.field_year_offered
-    - search_api.server.os_search
-third_party_settings:
-  search_api_solr:
-    finalize: false
-    commit_before_finalize: false
-    commit_after_finalize: false
-    multilingual:
-      limit_to_content_language: false
-      include_language_independent: true
-    highlighter:
-      maxAnalyzedChars: 51200
-      fragmenter: gap
-      regex:
-        slop: 0.5
-        pattern: blank
-        maxAnalyzedChars: 10000
-      usePhraseHighlighter: true
-      highlightMultiTerm: true
-      preserveMulti: false
-      highlight:
-        mergeContiguous: false
-        requireFieldMatch: false
-        snippets: 3
-        fragsize: 0
-    mlt:
-      mintf: 1
-      mindf: 1
-      maxdf: 0
-      maxdfpct: 0
-      minwl: 0
-      maxwl: 0
-      maxqt: 100
-      maxntp: 2000
-      boost: false
-      interestingTerms: none
-    advanced:
-      index_prefix: ''
-      collection: ''
-      timezone: ''
 id: os_search_index
 name: 'OS Search Index'
 description: 'Main OS Search Index'
@@ -80,6 +41,10 @@ field_settings:
     dependencies:
       module:
         - node
+  custom_search_bundle:
+    label: 'Custom Bundle (text)'
+    property_path: custom_search_bundle
+    type: string
   custom_search_group:
     label: 'Group (text)'
     property_path: custom_search_group
@@ -104,7 +69,7 @@ field_settings:
     label: Title
     datasource_id: 'entity:bibcite_reference'
     property_path: title
-    type: solr_text_spellcheck
+    type: text
     dependencies:
       module:
         - bibcite_entity
@@ -153,6 +118,7 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
+  add_bundle_as_text: {  }
   add_group_as_text: {  }
   add_url: {  }
   aggregated_field: {  }
@@ -172,6 +138,7 @@ processor_settings:
     fields:
       - body
       - content_type
+      - custom_search_bundle
       - field_year_offered
       - reference_title
       - reference_type
@@ -186,24 +153,22 @@ processor_settings:
       strong: 2
     weights:
       preprocess_index: -15
-      preprocess_query: -15
+      preprocess_query: -46
   ignorecase:
     all_fields: true
     fields:
       - body
       - content_type
+      - custom_search_bundle
       - field_year_offered
       - reference_title
       - reference_type
       - title
     weights:
       preprocess_index: -20
-      preprocess_query: -20
+      preprocess_query: -49
   language_with_fallback: {  }
   rendered_item: {  }
-  solr_date_range:
-    weights:
-      preprocess_index: 0
   stemmer:
     all_fields: true
     fields:
@@ -214,7 +179,7 @@ processor_settings:
       texan: texa
     weights:
       preprocess_index: 0
-      preprocess_query: 0
+      preprocess_query: -42
   tokenizer:
     all_fields: true
     fields:
@@ -225,7 +190,7 @@ processor_settings:
     minimum_word_size: '3'
     weights:
       preprocess_index: -6
-      preprocess_query: -6
+      preprocess_query: -44
 tracker_settings:
   default:
     indexing_order: fifo
