--- a/config/sync/slick.optionset.os_slideshow.yml
+++ b/config/sync/slick.optionset.os_slideshow.yml
@@ -22,8 +22,8 @@ options:
     asNavFor: ''
     accessibility: true
     adaptiveHeight: false
-    autoplay: false
-    autoplaySpeed: 3000
+    autoplay: true
+    autoplaySpeed: 5000
     pauseOnHover: true
     pauseOnDotsHover: false
     pauseOnFocus: true
