Issue #12630 - PR Changes

--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -15,8 +15,10 @@ blacklist:
   - 'block.block.booknavigation*'
   - 'block.block.entityviewcontent*'
 graylist:
+  - elasticsearch_connector.cluster.elasticsearch_default
   - os_media.settings
   - os_publications.settings
+  - search_api.server.os_search
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
