Issue #12525 - Blog app settings (#12665)
* Issue #12525 - Enabled disqus module.

* Issue #12525 - Blogsetting config form.

* Issue #12525 - Disqus comment field changes.

* Issue #12525 - Disqus config added per vsite.

* Issue #12525 - Disqus tests added.

* Issue #12525 - View Disqus permissions for anonymous users added.

* Issue #12525 - Altered disqus element and addressed PR comments.

* Issue #12525 - Modified tests for blog app settings.

* Issue #12525 - Tests modified.

* Issue #12525 - Changes for Disqus overridden methods.

* Issue #12525 - Added preprocess_field to redirect to vsite_disqus element.

* Issue #12525 - Added disqus as dependency module.

--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - field.field.node.blog.body
     - field.field.node.blog.field_attached_media
+    - field.field.node.blog.field_disqus_comments
     - field.field.node.blog.field_taxonomy_terms
     - image.style.gallery
     - node.type.blog
   module:
     - cp_taxonomy
+    - disqus
     - os_media
     - text
     - user
@@ -112,6 +114,13 @@ content:
       id: ''
       overlay: ''
     third_party_settings: {  }
+    region: content
+  field_disqus_comments:
+    weight: 4
+    label: visually_hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: disqus_comment
     region: content
   field_taxonomy_terms:
     weight: 2
