Issue #12210 - Compact Mode Access (#12724)
* Issue #12210 - Compact Mode Access

* Issue #12210 - Compact Mode Assertions

--- a/profile/modules/cp/modules/cp_users/cp_users.permissions.yml
+++ b/profile/modules/cp/modules/cp_users/cp_users.permissions.yml
@@ -2,3 +2,7 @@ manage default group roles:
   title: 'Manage default group roles'
   description: 'Manage default group roles'
   restrict access: true
+
+use compact mode:
+  title: 'Use Compact Mode'
+  description: 'Allow user to enable/disable Compact mode.'
