--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -89,6 +89,7 @@ permissions:
   - 'revert bibcite_reference web_service revisions'
   - 'revert bibcite_reference website revisions'
   - 'rng register self'
+  - 'use compact mode'
   - 'use text format filtered_html'
   - 'use text format title_filter'
   - 'view bibcite_contributor'
