Issue #12676 - suppport role (#12692)
* Issue #12676 - Added new role suppport team and group role support user

* Issue #12676 - Created workflow for supporting vsite

* Issue #12676 - Added description to confirmation form

* Issue #12676 - Added custom access checker and PR changes

* Issue #12676 - Toolbar link changes

* Issue #12676 - Support role PR changes

* Issue #12676 - Added cron functionality to expire support users

* Issue #12676 - Changes for support user on Cp users

* Issue #12676 - Added kernel test for SupportVsite access checker

* Issue #12676 - added new subscribe image to support this site

* Issue #12676 - changed sprite name

* Issue #12676 - Fuctional test for support role and PR changes

* Issue #12676 - Changed to entity query for suport user cron and PR changes

* Issue #12676 - added supported for all group type and other pr changes

* Issue #12676 - Support role PR changes

--- a/profile/modules/cp/modules/cp_users/cp_users.routing.yml
+++ b/profile/modules/cp/modules/cp_users/cp_users.routing.yml
@@ -131,3 +131,12 @@ cp_users.existing_user_autocomplete:
     _controller: '\Drupal\cp_users\Controller\CpUserMainController::existingUserAutocomplete'
   requirements:
     _group_permission: 'manage cp users'
+
+#Support role routing
+cp_users.support.group_subscribe:
+  path: '/support/vsite'
+  defaults:
+    _form: '\Drupal\cp_users\Form\CpUserSupportConfirmForm'
+    _title: Subscribe to Vsite
+  requirements:
+    _support_vsite_access_check: 'TRUE'
