--- a/profile/modules/cp/modules/cp_users/cp_users.services.yml
+++ b/profile/modules/cp/modules/cp_users/cp_users.services.yml
@@ -18,7 +18,11 @@ services:
     arguments: ['@vsite.context_manager']
     tags:
       - { name: group_permission_calculator, priority: -200 }
-
+  cp_users.support_vsite_access_check:
+    class: \Drupal\cp_users\Access\CpUsersSupportAccessCheck
+    arguments: ['@vsite.context_manager']
+    tags:
+      - { name: access_check, applies_to: _support_vsite_access_check }
   cp_users.custom_compact_perm:
     class: Drupal\cp_users\Routing\CpUserRouteSubscriber
     tags:
