Issue #11840: Custom theme installed for one vsite should not affect caching in another (#11970)
* Issue #11840: Improve post-custom-theme-install performance

* Issue #11840: More improvement

* Issue #11840: More improvement

Given the fact that custom theme cannot be created and installed without
its dependencies being already installed. Therefore, code for installing
deps is no longer required.

* Issue #11840: CustomThemeInstallerTest

* Issue #11840: post-custom-theme-uninstall performance improvement

* Issue #11840: More post-install improvements

Given the fact that custom theme will not have any custom config to
install, therefore, config installation scripts can be removed.

* Issue #11840: Better CustomThemeInstallerTest

This should increase code coverage.

* Issue #11840: More improvement

Using vsite specific cache tag.

* Issue #11840: Invalidate vsite rendered cache

* Issue #11840: Disable route rebuild post-custom-theme-set-default

* Issue #11840: Better way to alter cache tags in active vsite response

* Issue #11840: More performance improvement

Do not invalidate `rendered` cache tag while setting a custom theme as
default.

* Issue #11840: Better checks while invalidating vsite rendered cache tag

Now also checking whether a custom theme is being set as default.

* Issue #11840: Trial and error - Fix Travis fails

* Revert "Issue #11840: Trial and error - Fix Travis fails"

This reverts commit 7f5fe0771d48c9869a352aff767441591771bb4a.

* Issue #11840: Trial and error - Fix Travis failure

* Issue #11840 - Code improvement

Instead of patching code for customizations, it is done by overriding
the service.

* Issue #11840 - Separate out install and uninstall tests

* Issue #11840 - Assert that desired cache tags are not invalidated

* Issue #11840 - Assert that routes are not rebuilt

* Issue #11840 - Assert than desired cache ids are not invalidated after install

* Revert "Issue #

--- a/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
+++ b/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
@@ -7,6 +7,12 @@ services:
     arguments: ['@theme_handler']
   cp_appearance.custom_theme_installer:
     class: \Drupal\cp_appearance\CustomThemeInstaller
+    arguments: ['@theme_handler', '@config.factory', '@module_handler', '@asset.css.collection_optimizer', '@logger.channel.default', '@state']
+  cp_appearance.theme_config_subscriber:
+    class: \Drupal\cp_appearance\EventSubscriber\ThemeConfigSubscriber
+    arguments: ['@cache_tags.invalidator', '@vsite.context_manager']
+    tags:
+      - { name: event_subscriber }
   cp_appearance.init_custom_theme_subscriber:
     class: \Drupal\cp_appearance\EventSubscriber\InitCustomThemeSubscriber
     arguments: ['@config.factory', '@theme.manager', '@theme.initialization']
