--- a/config/sync/core.entity_view_display.media.presentation.presentation.yml
+++ b/config/sync/core.entity_view_display.media.presentation.presentation.yml
@@ -1,12 +1,12 @@
-uuid: 99a1a34b-5871-430f-8a35-aad6f1eb0cd4
+uuid: 19357fc9-39a4-4535-96f8-01d90c8bd9a5
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.media.presentation
-    - field.field.media.document.field_media_file
-    - field.field.media.document.field_taxonomy_terms
-    - media.type.document
+    - field.field.media.presentation.field_media_file
+    - field.field.media.presentation.field_taxonomy_terms
+    - media.type.presentation
   module:
     - cp_taxonomy
     - layout_builder
@@ -15,20 +15,20 @@ third_party_settings:
   layout_builder:
     allow_custom: false
     enabled: false
-id: media.document.presentation
+id: media.presentation.presentation
 targetEntityType: media
-bundle: document
+bundle: presentation
 mode: presentation
 content:
   field_media_file:
-    type: os_office_embed
     weight: 0
-    region: content
-    label: visually_hidden
+    label: hidden
     settings:
       width: 500
       height: 400
     third_party_settings: {  }
+    type: os_office_embed
+    region: content
   field_taxonomy_terms:
     weight: 1
     label: hidden
