Issue #12458 - Determine for me taxonomy with views (#12701)
* Issue #12458 - Working custom contextual with tid argument (phase 1)

* Issue #12458 - Create a new property for App and handle if contextual selected (WIP)

* Issue #12458 - Test job env

* Issue #12458 - Remove Test job env

* Issue #12458 - Remove unused custom argument

* Issue #12458 - Use core argument with extra ?term query if contextual

* Issue #12458 - Remove query term and extend test with proper links

* Issue #12458 - Modify views with special title override

* Issue #12458 - Update all views argument

* Issue #12458 - Require contrib again

* Issue #12458 - Fix doc

--- a/composer.json
+++ b/composer.json
@@ -224,6 +224,7 @@
         "drupal/term_reference_tree": "1.x-dev",
         "drupal/toolbar_menu": "^2.1",
         "drupal/twig_extensions": "^2.0",
+        "drupal/twig_tweak": "^2.4",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_accordion": "^1.1",
         "drupal/views_ical": "^2.2",
