--- a/config/sync/views.view.calendar.yml
+++ b/config/sync/views.view.calendar.yml
@@ -1025,16 +1025,54 @@ display:
       css_class: full-calendar-view
       defaults:
         css_class: false
+        arguments: false
       tab_options:
         type: none
         title: Calendar
         description: ''
         weight: 0
+      arguments:
+        field_taxonomy_terms_target_id:
+          id: field_taxonomy_terms_target_id
+          table: node__field_taxonomy_terms
+          field: field_taxonomy_terms_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: true
+          title: '{{ drupal_field(''name'', ''taxonomy_term'', arguments.field_taxonomy_terms_target_id) }}'
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.field_recurring_date'
