--- a/config/sync/views.view.os_software_projects.yml
+++ b/config/sync/views.view.os_software_projects.yml
@@ -218,13 +218,49 @@ display:
             'group_node:software_release': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
-      arguments: {  }
+      arguments:
+        field_taxonomy_terms_target_id:
+          id: field_taxonomy_terms_target_id
+          table: node__field_taxonomy_terms
+          field: field_taxonomy_terms_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: true
+          title: '{{ drupal_field(''name'', ''taxonomy_term'', arguments.field_taxonomy_terms_target_id) }}'
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
       display_extenders: {  }
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
         - 'user.node_grants:view'
       tags: {  }
@@ -341,6 +377,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
         - 'user.node_grants:view'
       tags: {  }
