Issue #12375 - Restrict outline form options to vsite pages. (#12741)
* Issue #12375 - Restrict outline form options to vsite pages.

* Issue #12375 - Book outline form alter.

* Issue #12375 - Removing Subpage contextual links for non-book pages.

* Issue #12375 - Addressed PR feedback and added tests.

* Issue #12375 - Modified os_pages tests.

--- a/profile/modules/apps/os_pages/os_pages.group.permissions.yml
+++ b/profile/modules/apps/os_pages/os_pages.group.permissions.yml
@@ -4,3 +4,6 @@ create new books:
 add content to books:
   title: 'Add content and child pages to pages and manage their hierarchies.'
   section: 'Permission'
+administer book outlines:
+  title: 'Administer book outlines'
+  section: 'Permission'
