--- a/config/sync/group.role.personal-administrator.yml
+++ b/config/sync/group.role.personal-administrator.yml
@@ -20,6 +20,7 @@ permissions:
   - 'administer apps'
   - 'administer apps settings'
   - 'administer bibcite_reference'
+  - 'administer book outlines'
   - 'administer cp settings'
   - 'administer group'
   - 'administer members'
