--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -60,6 +60,7 @@ module:
   entity: 0
   entity_reference: 0
   entity_reference_revisions: 0
+  facets: 0
   fakeobjects: 0
   field: 0
   field_layout: 0
